[CAN-27] Fix Overflow issues cause by footer. Problem Cool new sliding footer is now causing overflow issues for pages.
Solution
Refactored the pages
- Moved a lot of boiler code into layout.tsx
- Deleted on used routes
- Moved navbar to abs position at top of screen
- Set determined sizes for nav for predictable positioning
- instead of centering using flexbox - using margins for main content
- added global css variable tags to be reused (check global.css)
- refactored pages to use one component with a wrapper div for content.
Note

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,13 @@ html, body {
   margin: 0;
 }
 
+:root {
+  --layout-width: 1080px;
+  --layout-x-padding: 1rem;
+  --footer-height: 150px;
+  --navbar-height: 120px;
+}
+
 /* #section_footer {
   width: 100%;
   background: #B6CF54;
